--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        Hi I'm Gitesh Sangole. I'm 28 years old. When I have free time, it's
+                        Hi I'm Gitesh Sangole. I'm 29 years old. When I have free time, it's
                         great to indulge in some of my favorite hobbies like study Maths & Science and exploring
                         different kinds of new technology. <br>
 
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Gitesh.off AWS.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/Gitesh 2025-12.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
